# Point-LIO

./: CMakeLists.txt  package.xml
config/: avia.yaml  mid360.yaml
include/: common_lib.h
launch/: mapping_avia.launch.py  mapping_mid360.launch.py
rviz_cfg/: loam_livox.rviz
src/: IMU_Processing.cpp  IMU_Processing.h  IMU_Processing.hpp  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
